# public

cli_interp/: CMakeLists.txt  example.txt
cli_interp/include/: instruction.h  interpreter.h  lexer.h  state.h
cli_interp/source/: instruction.cpp  interpreter.cpp  lexer.cpp  main.cpp  state.cpp
